# pyspy-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
.playwright-mcp/: page-2026-07-12T09-11-18-576Z.yml
doc/: blog-writing-plan.md  pyspy-mcp-intro.md
doc/images/: optimized_example.py  profile.raw.txt  profile.speedscope.json  profile_optimized.speedscope.json  report.html  slow_example.py
src/pyspy_mcp/: __init__.py  cleanup.py  errors.py  parser.py  process_util.py  py_spy_finder.py  server.py  tools.py
tests/pyspy_mcp/: test_cleanup.py  test_errors.py  test_integration.py  test_integration_errors.py  test_integration_top.py  test_parser_edge_cases.py  test_process_util.py  test_py_spy_finder.py  test_server.py  test_tools.py
tests/scripts/: cpu_busy.py
