[project]
name = "pyspy-mcp"
version = "0.1.0"
description = "MCP server for Python performance testing with py-spy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LBunny"},
]

[project.urls]
Homepage = "https://github.com/LBunny/pyspy-mcp"
Repository = "https://github.com/LBunny/pyspy-mcp"
Issues = "https://github.com/LBunny/pyspy-mcp/issues"
keywords = ["mcp", "py-spy", "profiler", "python", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp>=3.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    # PyPI-distributed py-spy command-line tool. The local source build is used
    # automatically during development (see py_spy_finder.py).
    "py-spy>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
pyspy-mcp = "pyspy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyspy_mcp"]
# Include the bundled py-spy binary when present.
artifacts = ["src/pyspy_mcp/bin/*"]

[tool.hatch.build.targets.sdist]
only-packages = true

[tool.pytest.ini_options]
testpaths = ["tests/pyspy_mcp"]
filterwarnings = [
    "ignore::DeprecationWarning",
]